# peep

peep/: README.md  pubspec.yaml
peep-engine/: .dockerignore  Cargo.toml  Dockerfile  peep-mailboxes.sqlite3-shm  peep-mailboxes.sqlite3-wal
peep-engine/src/: auth.rs  conference.rs  groups.rs  keys.rs  mailbox.rs  main.rs  sfu.rs  websocket.rs
peep/android/app/: build.gradle.kts
peep/android/app/src/debug/: AndroidManifest.xml
peep/android/app/src/main/: AndroidManifest.xml
peep/android/app/src/main/kotlin/com/example/peep/: MainActivity.kt  MessageNotificationService.kt  ScreenShareService.kt
peep/ios/Runner/: Info.plist
peep/ios/Runner.xcodeproj/: project.pbxproj
peep/lib/: main.dart  webrtc_peer_native.dart  webrtc_peer_stub.dart  webrtc_peer_web.dart
peep/lib/ui/: call_screen.dart  messenger_home.dart
peep/linux/: CMakeLists.txt
peep/linux/runner/: my_application.cc
peep/macos/Flutter/: GeneratedPluginRegistrant.swift
peep/macos/Runner.xcodeproj/: project.pbxproj
peep/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
peep/macos/Runner/Configs/: AppInfo.xcconfig
peep/test/: native_crypto_test.dart
peep/tool/: appium_e2e.mjs
peep/web/: index.html  manifest.json
peep/windows/: CMakeLists.txt
peep/windows/runner/: Runner.rc  main.cpp
