[package]
name = "peep-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
tokio = { version = "1.52.3", features = ["full"] }
webrtc = "0.17.1"
